--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/validator": "^13.12.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "validator": "^13.12.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
